<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PreviewFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:layout_constraintBottom_toTopOf="@id/preview_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/preview_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/preview_image"
        app:layout_constraintBottom_toTopOf="@id/camera_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_fragment"
        app:srcCompat="@drawable/ic_baseline_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/open_camera"
        android:textAlignment="textStart"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_camera_24"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/gallery_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_img" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gallery"
        android:textAlignment="textStart"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_attach_file_24"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera_btn"
        app:layout_constraintTop_toBottomOf="@id/preview_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_tv"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        app:boxStrokeColor="@color/orange"
        app:hintTextColor="@color/darker_grey"
        app:layout_constraintBottom_toTopOf="@+id/rotate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_btn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_portrait_et"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollbars="vertical"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rotate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rotate"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_rotate_right_24"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@id/stack_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/stack_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/upload_file"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_cloud_upload_24"
            app:iconTint="@color/black" />

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>